<resources>
    <string name="app_name">My Application</string>
    <string name="oreder_again">Oreder Again</string>
    <string name="payment_method">Payment Method</string>
    <string name="add_credit_card">Add credit card</string>
    <string name="cardholder_name">CardHolder name</string>
    <string name="name">Name</string>
    <string name="card_number">Card number</string>
    <string name="xxxx_xxxx_xxxx_xxxx">xxxx-xxxx-xxxx-xxxx</string>
    <string name="expiration_date">Expiration date</string>
    <string name="_00_00">00/00</string>
    <string name="secruity_code">Secruity code</string>
    <string name="xxx">xxx</string>
    <string name="your_address">Your Address</string>
    <string name="billing_address">Billing Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="state">State</string>
    <string name="lllinon">lllinon</string>
    <string name="zip_code">Zip code</string>
    <string name="xxxxxx">xxxxxx</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_numebr">Phone numebr</string>
    <string name="set_this_card_as_defualt_payment_method">Set this card as defualt payment method</string>
    <string name="pay_now">Pay now</string>
    <string name="classroom_headphones_bulk_10_pack">Classroom Headphones-Bulk 10-Pack</string>
    <string name="productimage">productImage</string>
    <string name="student_on_ear_comfy_swivel_earphones_for_library_school_airplane_kids_for_online_learning_and_travel_hq_stereo_sound_3_5mm_jack_mixed_colors">Student On Ear Comfy Swivel Earphones for Library, School, Airplane, Kids-for Online Learning and Travel, HQ Stereo Sound 3.5mm Jack (Mixed Colors)</string>
    <string name="rating">Rating</string>
    <string name="_4_5">4.5</string>
    <string name="product_details">Product Details</string>
    <string name="brand">Brand</string>
    <string name="sonitum">Sonitum</string>
    <string name="color">Color</string>
    <string name="mixed_colors">Mixed colors</string>
    <string name="form_factor">Form Factor</string>
    <string name="on_ear">On Ear</string>
    <string name="connectivity_technology">Connectivity Technology</string>
    <string name="wired">Wired</string>
    <string name="special_feature">Special Feature</string>
    <string name="lightweight">Lightweight</string>
    <string name="quantity">Quantity:</string>
    <string name="_1">1</string>
    <string name="price_50">Price:50$</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="buy">Buy</string>
    <string name="imagecategory">imageCategory</string>
    <string name="imageprofile">imageProfile</string>
    <string name="imagesearch">imageSearch</string>
    <string name="search">Search</string>
    <string name="all_featured">All Featured</string>
    <string name="electronics">Electronics</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="dnzzs_mens_oversized_hoodie_unisex">Dnzzs Mens Oversized Hoodie Unisex</string>
    <string name="_39_99">$39.99</string>
    <string name="oreder_now">Oreder Now</string>
    <string name="faiable_mens_oversized_hoodie_pullover">FAIABLE Mens Oversized Hoodie Pullover</string>
    <string name="_29_99">$29.99</string>
    <string name="paodikuai_men_hoodie_sweatshirt_loose_fit_fashion">PAODIKUAI Men Hoodie Sweatshirt Loose Fit Fashion</string>
    <string name="_40">$40</string>
    <string name="match_men_s_slim_tapered">Match Men\'s Slim Tapered</string>
    <string name="_99_99">$99.99</string>
    <string name="online_shopping_sales_product">Online shopping sales product</string>
    <string name="et_porttitor_et_aliquam_laoreet_in_volutpat_diam_enim_sagittis_quis_vestibulum_interdum_sit_mauris_libero_faucibus_quis_eget_volutpat_fringilla_viverra_gravida_interdum_quis_ligula_pharetra_aenean_odio_tortor_dolor_gravida_tortor_suspendisse">Et porttitor et aliquam laoreet in volutpat. Diam enim sagittis quis vestibulum interdum sit. Mauris libero, faucibus quis eget volutpat fringilla. Viverra gravida interdum quis ligula pharetra aenean. Odio tortor, dolor gravida tortor suspendisse</string>
    <string name="let_s_go">Let\'s Go</string>
</resources>