<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PayActivity">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="852dp"
        android:background="#49919A"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/imageBack"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#00FFFFFF"
                app:srcCompat="@drawable/back" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="0"
                android:text="@string/payment_method"
                android:textColor="#CBFDFDFD"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="InefficientWeight" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/add_credit_card"
            android:textColor="#FFFFFF"
            android:textSize="27sp" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/cardholder_name"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_input"
            android:textColorHint="#787676"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingHorizontal="15dp"
            android:textColor="#090404" />

        <TextView
            android:id="@+id/tvCartNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/card_number"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_input"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etCartNumber"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/bg_input"
                android:ems="10"
                android:hint="@string/xxxx_xxxx_xxxx_xxxx"
                android:inputType="text"
                android:paddingHorizontal="15dp"

                android:textColor="#090404"
                android:textColorHint="#787676"
                tools:ignore="TextFields"
                android:layout_width="0dp"/>

            <ImageView
                android:id="@+id/visaImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/money" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/expiration_date"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_input"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etDate"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_input"
                        android:ems="10"
                        android:textColor="#090404"
                        android:hint="@string/_00_00"
                        android:paddingHorizontal="15dp"
                        android:layout_width="0dp"
                        android:textColorHint="#787676"/>

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:srcCompat="@drawable/order" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/secruity_code"
                    android:textColor="#FBFBFB"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etCode"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_input"
                    android:ems="10"
                    android:textColor="#090404"
                    android:hint="@string/xxx"
                    android:inputType="text"
                    android:paddingHorizontal="10dp"
                    android:textColorHint="#787676"/>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvInfoAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/your_address"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvBillingAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/billing_address"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etBillingAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_input"
            android:textColor="#090404"
            android:ems="10"
            android:hint="@string/enter_address"
            android:textColorHint="#787676"
            android:inputType="text"
            android:paddingHorizontal="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/state"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_input"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextText4"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_input"
                        android:ems="10"
                        android:hint="@string/lllinon"
                        android:textColor="#090404"
                        android:inputType="text"
                        android:paddingHorizontal="15dp"
                        android:layout_width="match_parent"
                        android:textColorHint="#787676"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvZipCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/zip_code"
                    android:textColor="#FBFBFB"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etZipCode"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_input"
                    android:ems="10"
                    android:hint="@string/xxxxxx"
                    android:inputType="text"
                    android:textColor="#090404"
                    android:textColorHint="#787676"
                    android:paddingHorizontal="10dp" />

            </LinearLayout>
        </LinearLayout>



        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/phone_number"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_input"
            android:ems="10"
            android:textColorHint="#787676"
            android:hint="@string/phone_numebr"
            android:textColor="#090404"
            android:paddingHorizontal="15dp"
            />
        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/set_this_card_as_defualt_payment_method"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_pay"
            android:text="@string/pay_now"
            android:textColor="@color/white" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>