<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5E9FB"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="33dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="481dp"
            app:srcCompat="@drawable/img1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online_shopping_sales_product"
            android:textAlignment="center"
            android:textColor="#EF0000"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/et_porttitor_et_aliquam_laoreet_in_volutpat_diam_enim_sagittis_quis_vestibulum_interdum_sit_mauris_libero_faucibus_quis_eget_volutpat_fringilla_viverra_gravida_interdum_quis_ligula_pharetra_aenean_odio_tortor_dolor_gravida_tortor_suspendisse"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"

            android:layout_marginTop="20dp"
            android:background="@drawable/corner_radius"
            android:paddingStart="75dp"
            android:paddingTop="10dp"
            android:paddingEnd="75dp"
            android:paddingBottom="10dp"
            android:text="@string/let_s_go"
            android:textColor="#FDFDFD"
            android:textSize="28sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>